# git-aside

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: aside.rs  config.rs  git_helpers.rs  hooks.rs  lib.rs  main.rs  valet.rs
tests/: cli_test.rs  config_test.rs  hooks_test.rs
