[package]
name = "git-valet"
version = "0.1.0"
edition = "2021"
description = "Transparently version private files (.env, secrets, notes, AI prompts) in a separate repo, synced via git hooks. Zero workflow change."
keywords = ["git", "private-files", "secrets", "cli", "hooks"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/JSpatim/git-valet"
homepage = "https://github.com/JSpatim/git-valet"
license = "MIT"
readme = "README.md"

[[bin]]
name = "git-valet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
colored = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
